--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
         <i class="fa fa-user"></i>
         <span>Welcome</span>
       </a>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#/problem">
         <i class="fa fa-user"></i>
         <span>Problems</span>
       </a>
