--- a/src/problem/add-problem.html
+++ b/src/problem/add-problem.html
@@ -31,7 +31,7 @@
         </form>
 
         <div style="text-align: center">
-            <button class="btn btn-success" click.delegate="addProblem()" disabled.bind="!canAdd">Add Problem</button>
+            <button class="btn btn-success" click.delegate="addProblem()" disabled.bind="!canSave">Add Problem</button>
         </div>
 
     </div>
