--- a/src/problem/problem-detail.html
+++ b/src/problem/problem-detail.html
@@ -1,5 +1,41 @@
 <template>
-    <h1> Specific Problem</h1>
-    <h2>${name}</h2>
-    <h3>${description}</h3>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">Problem</h3>
+        </div>
+        <div class="panel-body">
+            <form role="form" class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Name</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" placeholder="name" class="form-control" value.bind="problem.name">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Description</label>
+
+                    <div class="col-sm-10">
+                        <textarea placeholder="decription" class="form-control"
+                                  value.bind="problem.description"></textarea>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Hint</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" placeholder="hint" class="form-control" value.bind="problem.hint">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <button class="btn btn-success" click.delegate="updateProblem()" disabled.bind="!canUpdate">update Problem</button>
+    </div>
+
+
 </template>
